objects/BMCServiceDesk__Manifest__c.object
<CustomObject>
    <description>Stores data that is used to track progress of a release for various status values.</description>
    <fields>
        <fullName>BMCServiceDesk__FKChange_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Request</label>
        <referenceTo>BMCServiceDesk__Change_Request__c</referenceTo>
        <relationshipLabel>Manifests</relationshipLabel>
        <relationshipName>Release_Manifests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKFuture_Tasks__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template</label>
        <referenceTo>BMCServiceDesk__SYSTemplate__c</referenceTo>
        <relationshipLabel>Manifests</relationshipLabel>
        <relationshipName>Manifests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKRelease__c</fullName>
        <label>Release</label>
        <referenceTo>BMCServiceDesk__Release__c</referenceTo>
        <relationshipLabel>Manifests</relationshipLabel>
        <relationshipName>Release_Manifests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKStatus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Status</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__Status__c.BMCServiceDesk__appliesToRelease__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__Status__c.BMCServiceDesk__state__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Status__c</referenceTo>
        <relationshipLabel>Manifests</relationshipLabel>
        <relationshipName>Release_Manifests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKTask__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task</label>
        <referenceTo>BMCServiceDesk__Task__c</referenceTo>
        <relationshipLabel>Manifests</relationshipLabel>
        <relationshipName>Release_Manifests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKTemplate_Linking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FKTemplate Linking</label>
        <referenceTo>BMCServiceDesk__SYSTemplateLink__c</referenceTo>
        <relationshipLabel>Manifests</relationshipLabel>
        <relationshipName>Manifests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Template_Order__c</fullName>
        <formula>BMCServiceDesk__FKTemplate_Linking__r.BMCServiceDesk__orderNumber__c</formula>
        <label>Template Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Manifest</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MAN-{0}</displayFormat>
        <label>Manifest Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manifests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>